# junior-spring

distributed-system/: contacts.md  intro.md
graphics/: .gitignore  1-intro.md  3.md
graphics/assignments/: .gitignore  template.tex
graphics/assignments/1/: intro.md
graphics/assignments/4/: template.tex
graphics/assignments/GLFW/: cmake_uninstall.cmake
graphics/assignments/template/: CMakeLists.txt
graphics/assignments/test/: CMakeLists.txt  Makefile  test.cbp
graphics/assignments/test/dependencies/GLFW/: cmake_uninstall.cmake
graphics/assignments/test/dependencies/GLFW/src/: glfw3.pc
graphics/assignments/test/src/: main.cpp  msvc_gl.h
graphics/assignments/texture/: CMakeLists.txt
graphics/assignments/traingle/: CMakeLists.txt
mining/: .gitignore  contacts.md
mining/cart/: CART.ipynb
mining/cart/.ipynb_checkpoints/: CART-checkpoint.ipynb
mining/kaggle/: .gitignore
mining/kaggle/assignment1/: Classification.ipynb  Project 1(New).ipynb  Project 1.ipynb  kmeans.py  preprocess.py  regression.py  result.csv
mining/kaggle/assignment2/: .gitignore  README.md  baseline.ipynb  performance_plot.py  plot.py
mining/kaggle/assignment3/: .gitignore  kaggle.json  move image.ipynb  project3-eval.ipynb  project3-train-no-pretrain.ipynb  project3-train.ipynb  resnn.ipynb
mining/kaggle/titanic/: loader.py  logistic.py  network.pt  predict.py  regression.py  regression_result.csv  result.csv  trainer.py
mining/projects/: .gitignore
mining/projects/JD/: JD Cup.ipynb  czhjdata2019baseline.ipynb
mining/projects/huawei/: .gitignore  Huawei.ipynb  (+14 more)
nlp/Lecture 10/: .gitignore
nlp/Lecture 11/: .gitignore  report.md
nlp/Lecture 13/: ldh.owl
nlp/Lecture 14/: sysu.owl
nlp/Lecture 15/: EMTM_TEST.sql  lecture15_实验 利用D2RQ生成RDF.ppt  mytest.nt  mytest.ttl  说明.md
nlp/Lecture 7/: sentiment.ipynb
nlp/editDistance/: edit_distance.py
nlp/lecture 6/: ex6.py
nlp/regex/: 1.py  2.py  3.py
system-analysis/: 5-exp-1.uxf  5-exp-2.uxf  5-exp-3.uxf  5-exp.uxf  5.17-uml.uxf  cooking.uxf  hotel-activity.uxf  hotel.uxf  movie-ticket.uxf  summary.md  test-assign_5.uxf
system-analysis/Umlet/: run.sh
system-analysis/assignment/: 1.md  2.md  3.md  4.md  5.md
testing/: contacts.md  index
testing/Lecture-note/: Lec.15-Chap.4 White-Box Testing (2).ppt
vr/: 2.md  3.md  4.md  5.md  6.md  paper.md  test.md
vr/Project/: .gitignore
(+239 files in other folders)
